# SurveyController

./: .coverage  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  SurveyController.spec  coverage.xml  go.work  go.work.sum  nuitka-crash-report.xml  pyproject.toml  pytest.ini  requirements.txt  rthook_pyside6.py  test_wjx_imports.py  test_wjx_probability_guard.py
.codex/environments/: environment.toml
.github/workflows/: build-release-installer.yml  deploy-worker.yml  go-ci.yml  python-ci.yml  python-fast-ci.yml  python-gate-ci.yml  release-to-r2.yml  release-windows.yml
.trae/rules/: git-commit-message.md
.trellis/: .template-hashes.json
CI/: python_ci.py  test_imports.py  test_live_survey_parsers.py
CI/live_tests/: run_async_engine_once.py  run_playwright_runtime_once.py  run_velopack_e2e.py  test_live_runtime_regression.py  test_playwright_runtime_regression.py  test_survey_parsers.py
CI/python_checks/: common.py  unit_test_check.py
CI/release_tools/: trim_velopack_feed.py
CI/unit_tests/: conftest.py  test_ai_batch_runtime.py  test_ai_protocols.py  test_async_bridge.py  test_async_compat.py  test_browser_element.py  test_browser_helpers.py  test_browser_runtime_async.py  test_free_proxy_pool.py  test_http_client.py  test_ip_usage_log.py  test_live_runtime_config.py  test_log_utils.py  test_log_utils_concurrency.py  test_markdown_utils.py  test_parse_pool.py  (+14 more)
Setup/: InnoSetup.iss  build-local-nuitka.ps1  build-local-velopack.ps1  build-release-installer.ps1  build-windows-installer.ps1
doc/: backfill_execution_flow.md
wjx/: __init__.py
(+701 files in other folders)
