[project]
name = "surveycontroller"
version = "3.1.4"
description = "SurveyController desktop application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "httpx>=0.27,<1",
    "numpy==2.3.5",
    "openpyxl",
    "packaging",
    "Pillow",
    "playwright",
    "PySide6==6.8.3",
    "PySide6-Fluent-Widgets==1.11.1",
    "velopack",
    "zxing-cpp",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
build = [
    "pyinstaller",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
line-length = 100
